2010-09-28  Sam Steingold  <sds@gnu.org>

	* modules/rawsock/rawsock.c (module__rawsock__init_function_2):
	use _GL_UNUSED instead of the ad hoc `unused'

2010-09-28  Sam Steingold  <sds@gnu.org>

	* Makefile.devel ($(MAKEMAKE_TMP)): substitute
	--disable-option-checking for @module_configure_flags@
	* configure.in: substitute $ac_configure_args
	for @module_configure_flags
	* makemake.in (module_configure_flags): use @module_configure_flags@
	instead of hard-wired --disable-option-checking

2010-09-28  Sam Steingold  <sds@gnu.org>

	get strerror from gnulib for POSIX:STRERROR
	* Makefile.devel (GNULIB_CORE): explicitly request already present errno
	(gnulib-imported): request strerror for syscalls
	* modules/syscalls/configure.in:
	call gl_HEADER_ERRNO_H instead of checking for <errno.h>;
	call gl_FUNC_STRERROR instead of checking for strerror
	* modules/syscalls/calls.c: include <errno.h> unconditionally
	(STRERROR): always define (errno.h & strerror ensured by gnulib)
	* modules/syscalls/gllib/errno.in.h, modules/syscalls/glm4/errno_h.m4:
	remove (already present in src/)
	* modules/syscalls/gllib/intprops.h, modules/syscalls/gllib/strerror.c:
	* modules/syscalls/glm4/strerror.m4: add

2010-09-28  Sam Steingold  <sds@gnu.org>

	* configure.in: simplify makemake generation, substitute SHELL
	* makemake.in: use @SHELL@
	* Makefile.devel ($(MAKEMAKE_TMP)): substitute @SHELL@
	Suggested by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>
	<http://article.gmane.org/gmane.comp.sysutils.autoconf.general/13369>

2010-09-28  Sam Steingold  <sds@gnu.org>

	* stream.d (resize_screen): call redisplay()

2010-09-27  Sam Steingold  <sds@gnu.org>

	rely on gnulib for setenv portability
	* lispbibl.d (clisp_setenv): remove
	* misc.d (push_envar): return no values
	(GETENV): remove dead code
	(cat_env_var, setenv_via_environ, clisp_setenv): remove
	(SETENV): use setenv and unsetenv instead of clisp_setenv
	* spvw_language.d (init_language): ditto