@@ -32,6 +32,8 @@ User visible changes
 * Bug fixes:
   + Fix documentation strings handling for structs (bug#3040648).
   + Fix SCREEN behavior when the window is resized.
+  + Pass the top-level configure arguments --build= & --host=
+    to the module configures (bug#3076160).
 
 
 2.49 (2010-07-07)
